# Resume-Agent

./: .gitignore  README.md
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/versions/: 0001_create_core_tables.py  0002_redesign_skill_evidences.py  0003_rename_skill_evidences_to_skills.py  0004_rename_current_jd_analysis_id.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  records.py
apps/api/app/routers/: applications.py  config.py  jobs.py  matches.py  profile.py  resumes.py
apps/api/app/schemas/: __init__.py  applications.py  config.py  jobs.py  matches.py  profile.py  resumes.py
apps/api/app/services/: jd_rules.py  markdown_export.py  match_placeholder.py  resume_placeholder.py
apps/api/tests/: conftest.py  test_applications_api.py  test_config_api.py  test_health.py  test_jd_rules.py  test_jobs_api.py  test_matches_api.py  test_profile_api.py  test_resumes_api.py  test_schema.py
apps/web/: index.html  package.json  pnpm-lock.yaml
apps/web/src/: App.test.tsx  App.tsx  main.tsx
docs/superpowers/: 改进.md
docs/superpowers/plans/: 2026-07-11-local-web-app-implementation-plan.md  2026-07-14-profile-library-ui-plan.md  2026-07-15-skill-evidence-page-plan.md  2026-07-15-岗位与JD分析实施计划.md  2026-07-17-匹配与简历版本实施计划.md  2026-07-17-匹配与简历版本设计.md  2026-07-18-投递导出与配置实施计划.md  2026-07-18-投递导出与配置设计.md
docs/superpowers/specs/: 2026-07-10-job-agent-design.md  2026-07-14-unified-dev-command-design.md  (+1 more)
(+24 files in other folders)
