[project]
name = "resume-agent-api"
version = "0.1.0"
description = "Local API for the student job search agent."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
